Add firewall logs an some tweaks and tests